--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         // ============================================================
         // HLAVNÍ NASTAVENÍ — uprav souřadnice pokud obrázek nesedí
         // ============================================================
-        const IMAGE_URL = 'mapa_svetelne_znecisteni.png'; // název tvého souboru
+        const IMAGE_URL = './mapa_svetelne_znecisteni.png'; // název tvého souboru
 
         // Souřadnice rohů obrázku [latitude, longitude]
         // Severozápadní roh (levý horní) a jihovýchodní roh (pravý dolní)
